; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/mangling/extr_rust.c_replace_seq.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/mangling/extr_rust.c_replace_seq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i8**, i8*, i8)* @replace_seq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @replace_seq(i8** %0, i8** %1, i8* %2, i8 signext %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8, align 1
  %10 = alloca i64, align 8
  store i8** %0, i8*** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8 %3, i8* %9, align 1
  %11 = load i8*, i8** %8, align 8
  %12 = call i64 @strlen(i8* %11)
  store i64 %12, i64* %10, align 8
  %13 = load i8**, i8*** %6, align 8
  %14 = load i8*, i8** %13, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i64, i64* %10, align 8
  %17 = call i64 @strncmp(i8* %14, i8* %15, i64 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %31

20:                                               ; preds = %4
  %21 = load i8, i8* %9, align 1
  %22 = load i8**, i8*** %7, align 8
  %23 = load i8*, i8** %22, align 8
  store i8 %21, i8* %23, align 1
  %24 = load i64, i64* %10, align 8
  %25 = load i8**, i8*** %6, align 8
  %26 = load i8*, i8** %25, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 %24
  store i8* %27, i8** %25, align 8
  %28 = load i8**, i8*** %7, align 8
  %29 = load i8*, i8** %28, align 8
  %30 = getelementptr inbounds i8, i8* %29, i64 1
  store i8* %30, i8** %28, align 8
  store i32 1, i32* %5, align 4
  br label %31

31:                                               ; preds = %20, %19
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @strncmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
